# safecmd

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bashxtract.html  bashxtract.html.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
claude-plugin/: README.md  hooks.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/scripts/: validator.py
nbs/: 00_bashxtract.ipynb  01_ core.ipynb  01_core.ipynb  index.ipynb  nbdev.yml  sidebar.yml
safecmd/: __init__.py  _modidx.py  bashxtract.py  core.py  skill.py
safecmd/safecmd/: bashxtract.py
